src/test/deca/context/invalid/assign-compatible-int-float.context
assign-compatible-int-float.deca:2:
